# bot-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}_bot/: LICENSE  main.py  pyproject.toml
{{ cookiecutter.project_slug }}_bot/{{ cookiecutter.project_slug }}/: __init__.py  settings.py
{{ cookiecutter.project_slug }}_bot/{{ cookiecutter.project_slug }}/db/: config.py  router.py
{{ cookiecutter.project_slug }}_bot/{{ cookiecutter.project_slug }}/models/: __init__.py  user.py
{{ cookiecutter.project_slug }}_bot/{{ cookiecutter.project_slug }}/telegram/: __init__.py  app.py
{{ cookiecutter.project_slug }}_bot/{{ cookiecutter.project_slug }}/telegram/filters/: admin.py
{{ cookiecutter.project_slug }}_bot/{{ cookiecutter.project_slug }}/telegram/handlers/: __init__.py
{{ cookiecutter.project_slug }}_bot/{{ cookiecutter.project_slug }}/telegram/middlewares/: __init__.py  acl.py  logger.py
{{ cookiecutter.project_slug }}_bot/{{ cookiecutter.project_slug }}/utils/: logger.py
